vlib/v/checker/tests/cast_integer_with_overflow_err.out
vlib/v/checker/tests/cast_integer_with_overflow_err.vv:2:7: error: value `300` overflows `u8`
    1 | fn main() {
    2 |     a := u8(300)
      |          ~~~~~~~
    3 |     _ = a
    4 |     b := u16(300_000)
vlib/v/checker/tests/cast_integer_with_overflow_err.vv:4:7: error: value `300000` overflows `u16`
    2 |     a := u8(300)
    3 |     _ = a
    4 |     b := u16(300_000)
      |          ~~~~~~~~~~~~
    5 |     _ = b
    6 |     c := u32(300_000_000_000)
vlib/v/checker/tests/cast_integer_with_overflow_err.vv:6:7: error: value `300000000000` overflows `u32`
    4 |     b := u16(300_000)
    5 |     _ = b
    6 |     c := u32(300_000_000_000)
      |          ~~~~~~~~~~~~~~~~~~~~
    7 |     _ = c
    8 |     d := u64(300_000_000_000_000_000_000)
vlib/v/checker/tests/cast_integer_with_overflow_err.vv:8:7: error: value `300000000000000000000` overflows `u64`
    6 |     c := u32(300_000_000_000)
    7 |     _ = c
    8 |     d := u64(300_000_000_000_000_000_000)
      |          ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    9 |     _ = d
   10 | }
