vlib/v/checker/tests/cast_integer_with_overflow_err.vv
fn main() {
	a := u8(300)
	_ = a
	b := u16(300_000)
	_ = b
	c := u32(300_000_000_000)
	_ = c
	d := u64(300_000_000_000_000_000_000)
	_ = d
}
